# fin-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_ZH.md  SOUL.md  SOUL_EN.md  deploy.sh  pyproject.toml
config/: config.example.json  cron.example.json
docs/: AGENTS.md  CONTRIBUTING_EN.md  SOUL.md
finagent/: __init__.py
finagent/adapters/: __init__.py  akshare_adapter.py  base.py  ptrade_adapter.py  qmt_adapter.py  tdx_adapter.py
finagent/db/: __init__.py  database.py  models.py
finagent/engine/: __init__.py  indicators.py  key_levels.py  volume_patterns.py
finagent/skills/: __init__.py
finagent/skills/chart/: __init__.py  decision.py  trend.py  volume.py
finagent/skills/exec/: __init__.py  alert.py  feishu.py  position.py  risk_check.py  trade_gateway.py
finagent/skills/hot-topics/: SKILL.md
finagent/skills/logic/: __init__.py  biz_model.py  financial.py  valuation.py
finagent/skills/market-pulse/: SKILL.md
finagent/skills/news-research/: SKILL.md
finagent/skills/radar/: __init__.py  index_pulse.py  news_logic.py
finagent/skills/scripts/: query_financial.py  query_global_markets.py  query_hot_topics.py  query_indices.py  query_kline.py  query_market_breadth.py  query_news.py  query_quote.py  query_sectors.py  query_stock_analysis.py
finagent/templates/: __init__.py  chart_decision.md  logic_report.md  market_brief.md
scripts/: deploy.sh  notify-start.sh
tests/test_engine/: __init__.py  test_indicators.py
tests/test_skills/: __init__.py  test_database.py  test_risk_check.py
(+1 files in other folders)
